[package]
name = "neuroswitchres"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1"

[dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "wincon", "shellapi"] }
systray = "0.4.0"
tempfile = "3.2.0"
